--- a/index.css
+++ b/index.css
@@ -3,17 +3,17 @@
 /* --------------------------------------- */
 
 @font-face {
-  font-family: 'Hk Grotesk';
+  font-family: "Hk Grotesk";
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/HKGrotesk-Regular.woff') format('woff');
+  src: url("./fonts/HKGrotesk-Regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Jost';
+  font-family: "Jost";
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/Jost-Regular.ttf') format('woff');
+  src: url("./fonts/Jost-Regular.ttf") format("woff");
 }
 
 * {
@@ -29,7 +29,7 @@
   --font-size-medium-1: 3.6rem;
   --font-size-large: 5.5rem;
   --font-size-huge: 7.5rem;
-  --font-stack: 'Hk Grotesk', sans-serif;
+  --font-stack: "Hk Grotesk", sans-serif;
 
   --line-height-normal: 1.7;
   --line-height-small: 1.2;
@@ -39,10 +39,9 @@
   --white: #f0e9f2;
   --white-1: #e5e5e6da;
 
-
   --container-max-width: 1180px;
   --container-normal-width: 800px;
-  --container-medium-width: 700px; 
+  --container-medium-width: 700px;
   --container-small-width: 500px;
 
   --gutter-huge: 12rem;
@@ -60,9 +59,9 @@ html {
   scroll-behavior: smooth;
 }
 
-@media(max-width: 1000px) {
+@media (max-width: 1000px) {
   html {
-      font-size: 52%;
+    font-size: 52%;
   }
 }
 
@@ -81,27 +80,27 @@ body {
   margin: 0 auto;
 }
 
-@media(max-width: 1340px) {
+@media (max-width: 1340px) {
   .row {
-      max-width: 1100px;
+    max-width: 1100px;
   }
 }
 
-@media(max-width: 1240px) {
+@media (max-width: 1240px) {
   .row {
-      padding: 0 var(--gutter-medium);
+    padding: 0 var(--gutter-medium);
   }
 }
 
-@media(max-width: 600px) {
+@media (max-width: 600px) {
   .row {
-      padding: 0 var(--gutter-normal);
+    padding: 0 var(--gutter-normal);
   }
 }
 
-@media(max-width: 600px) {
+@media (max-width: 600px) {
   .row {
-      padding: 0 var(--gutter-small);
+    padding: 0 var(--gutter-small);
   }
 }
 
@@ -118,11 +117,32 @@ img {
 /* --------------------------------------- */
 /* ----- Headlines and Paragraphs ----- */
 /* --------------------------------------- */
-
+.blink1 {
+  animation: blinkingText 1.2s steps(5, start) infinite;
+  -webkit-animation: blinkingText 1.2s steps(5, start) infinite;
+}
+.blink2 {
+  animation: blinkingText 1.7s steps(5, start) infinite;
+  -webkit-animation: blinkingText 1.4s steps(5, start) infinite;
+}
+.blink3 {
+  animation: blinkingText 2.2s steps(5, start) infinite;
+  -webkit-animation: blinkingText 1.7s steps(5, start) infinite;
+}
+@keyframes blinkingText {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blinkingText {
+  to {
+    visibility: hidden;
+  }
+}
 h1,
 h2,
 h3 {
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
   font-weight: 400;
   line-height: var(--line-height-small);
   color: var(--white);
@@ -134,9 +154,9 @@ h3 {
   font-weight: 400;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .heading-primary {
-      font-size: 6.5rem;
+    font-size: 6.5rem;
   }
 }
 
@@ -146,7 +166,7 @@ h2 {
 }
 
 h2::after {
-  content: '';
+  content: "";
   display: block;
   height: 2px;
   width: 10rem;
@@ -159,17 +179,17 @@ h3 {
   margin-bottom: var(--gutter-small);
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .heading-primary {
-      font-size: var(--font-size-large);
+    font-size: var(--font-size-large);
   }
 
   h2 {
-      font-size: var(--font-size-medium-1);
+    font-size: var(--font-size-medium-1);
   }
 
   h3 {
-      font-size: var(--font-size-medium);
+    font-size: var(--font-size-medium);
   }
 }
 
@@ -177,9 +197,9 @@ p {
   margin: var(--gutter-small-1) 0;
 }
 
-@media(max-width: 900px) {
-  p { 
-      max-width: var(--container-small-width);
+@media (max-width: 900px) {
+  p {
+    max-width: var(--container-small-width);
   }
 }
 
@@ -190,8 +210,8 @@ p {
 a {
   color: var(--white);
   font-weight: 400;
-  font-family: 'Jost', sans-serif;
-  transition: all .2s;
+  font-family: "Jost", sans-serif;
+  transition: all 0.2s;
   outline: 2px solid transparent;
 }
 
@@ -219,7 +239,7 @@ body:not(.user-is-tabbing) a:focus {
   padding: 1rem 4.2rem;
   text-decoration: none;
   color: inherit;
-  border: 1px solid  var(--pink);
+  border: 1px solid var(--pink);
   font-weight: 400;
 }
 
@@ -228,7 +248,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .btn::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -263,14 +283,14 @@ body:not(.user-is-tabbing) a:focus {
 .link__text {
   position: relative;
   display: inline-block;
-  padding: .6rem;
+  padding: 0.6rem;
   color: inherit;
   text-decoration: none;
   border-bottom: 1px solid var(--pink);
 }
 
 .link__text::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -312,22 +332,22 @@ body:not(.user-is-tabbing) a:focus {
   border-radius: 50%;
   z-index: 10;
   visibility: hidden;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .back-to-top__image {
   height: 70%;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .back-to-top {
-      right: 2rem;
+    right: 2rem;
   }
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .back-to-top {
-      right: 1rem;
+    right: 1rem;
   }
 }
 
@@ -350,21 +370,21 @@ body:not(.user-is-tabbing) a:focus {
   margin-right: var(--gutter-medium);
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .nav {
-      justify-content: center;
+    justify-content: center;
   }
 }
 
-@media(max-width: 400px) {
+@media (max-width: 400px) {
   .nav__item:not(:last-child) {
-      margin-right: var(--gutter-normal);
+    margin-right: var(--gutter-normal);
   }
 }
 
-@media(max-width: 300px) {
+@media (max-width: 300px) {
   .nav {
-      font-size: var(--font-size-small);
+    font-size: var(--font-size-small);
   }
 }
 
@@ -374,11 +394,11 @@ body:not(.user-is-tabbing) a:focus {
   padding: 1rem 0;
   text-decoration: none;
   color: inherit;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .nav__link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -404,8 +424,8 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .header {
-  background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-      url('./images/header.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4)),
+    url("./images/header.jpg");
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -422,17 +442,17 @@ body:not(.user-is-tabbing) a:focus {
 .header__text p {
   margin: 1.5rem 0 3.5rem;
   max-width: var(--container-medium-width);
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
   font-size: var(--font-size-medium);
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .header {
-      text-align: center;
+    text-align: center;
   }
 
   .header__text p {
-      transform: scale(.8);
+    transform: scale(0.8);
   }
 }
 
@@ -445,10 +465,10 @@ body:not(.user-is-tabbing) a:focus {
   align-items: center;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .work__box {
-      align-items: initial;
-      flex-direction: column-reverse;
+    align-items: initial;
+    flex-direction: column-reverse;
   }
 }
 
@@ -456,9 +476,9 @@ body:not(.user-is-tabbing) a:focus {
   margin-bottom: 25rem;
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .work__box:not(:last-child) {
-      margin-bottom: 20rem;
+    margin-bottom: 20rem;
   }
 }
 
@@ -481,7 +501,7 @@ body:not(.user-is-tabbing) a:focus {
   display: block;
   height: 3rem;
   margin-left: var(--gutter-normal);
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .work__code:hover {
@@ -492,16 +512,16 @@ body:not(.user-is-tabbing) a:focus {
   margin-bottom: var(--gutter-normal);
 }
 
-@media(min-width: 901px) {
+@media (min-width: 901px) {
   .work__image-box {
-      flex: 1;
-      margin: 0 0 0 10rem;
+    flex: 1;
+    margin: 0 0 0 10rem;
   }
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .work__code {
-      height: 4rem;
+    height: 4rem;
   }
 }
 
@@ -512,7 +532,7 @@ body:not(.user-is-tabbing) a:focus {
 .client__logos {
   display: flex;
   justify-content: space-between;
-  filter: invert(100%) grayscale(100%) opacity(.8);
+  filter: invert(100%) grayscale(100%) opacity(0.8);
 }
 
 .client__logo {
@@ -520,14 +540,14 @@ body:not(.user-is-tabbing) a:focus {
   max-width: 18rem;
 }
 
-@media(max-width: 1240px) {
+@media (max-width: 1240px) {
   .client__logos {
-      overflow-x: scroll;
-      padding: var(--gutter-normal);
+    overflow-x: scroll;
+    padding: var(--gutter-normal);
   }
 
   .client__logo:not(:last-of-type) {
-      margin-right: var(--gutter-medium);
+    margin-right: var(--gutter-medium);
   }
 }
 
@@ -541,10 +561,10 @@ body:not(.user-is-tabbing) a:focus {
   align-items: center;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .about__content {
-      flex-direction: column-reverse;
-      align-items: initial;
+    flex-direction: column-reverse;
+    align-items: initial;
   }
 }
 
@@ -552,14 +572,14 @@ body:not(.user-is-tabbing) a:focus {
   margin-bottom: var(--gutter-normal);
 }
 
-@media(min-width: 901px) {
+@media (min-width: 901px) {
   .about__text {
-      flex: 0 0 35%;
+    flex: 0 0 35%;
   }
-  
+
   .about__photo-container {
-      flex: 1;
-      margin: 0 var(--gutter-huge) 0 0;
+    flex: 1;
+    margin: 0 var(--gutter-huge) 0 0;
   }
 }
 
@@ -606,8 +626,8 @@ body:not(.user-is-tabbing) a:focus {
   transform: translateY(3px);
 }
 
-@media(max-width: 500px) {
+@media (max-width: 500px) {
   .footer {
-      padding: var(--gutter-medium) 0;
-  } 
+    padding: var(--gutter-medium) 0;
+  }
 }
