--- a/index.css
+++ b/index.css
@@ -463,6 +463,7 @@ body:not(.user-is-tabbing) a:focus {
 .work__box {
   display: flex;
   align-items: center;
+  margin-bottom:0 !important;
 }
 
 @media (max-width: 900px) {
